--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,7 +2,13 @@
   font-size: 24px;
   line-height: 1;
   font-weight: 400;
-  margin: 0;
   color: #ffffff;
   text-decoration: none;
+}
+
+@media (min-width: 768px) {
+  .footer__link {
+    font-size: 16px;
+    line-height: 1.125;
+  }
 }
