--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,3 +1,14 @@
 .footer__links {
-  
+  list-style: none;
+  padding: 0;
+  margin: 64px 0 0;
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .footer__links {
+    margin: 88px 0 24px;
+    flex-direction: row;
+  }
 }
