--- a/blocks/page/__section/page__section.css
+++ b/blocks/page/__section/page__section.css
@@ -1,23 +1,28 @@
 .page__section {
-  width: 100%;
+  max-width: 1280px;
   padding: 0 16px;
   box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media (min-width: 768px) {
   .page__section {
-    padding: 0 24px;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
 
 @media (min-width: 1024px) {
   .page__section {
-    padding: 0 48px;
+    padding-left: 48px;
+    padding-right: 48px;
   }
 }
 
 @media (min-width: 1280px) {
   .page__section {
-    max-width: 1280px;
+    padding-left: 48px;
+    padding-right: 48px;
   }
 }
