--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,3 +1,33 @@
 .cover__background {
-  
+  background-image: url(../../../images/cover-background.jpg);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  min-height: 200px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 66px;
+}
+
+@media (min-width: 768px) {
+  .cover__background {
+    min-height: 480px;
+    margin-top: 90px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .cover__background {
+    min-height: 640px;
+    margin-top: 92px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .cover__background {
+    min-height: 740px;
+  }
 }
