--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,19 @@
 .cover__subtitle {
   font-size: 14px;
   line-height: 1.15;
+  max-width: 288px;
   font-weight: 400;
-  margin: 0;
+  margin: 16px 0 0;
+  z-index: 10;
+  position: relative;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .cover__subtitle {
+    font-size: 18px;
+    line-height: 1.22;
+    max-width: 360px;
+    margin-top: 32px;
+  }
 }
