--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,18 @@
 .cover__title {
   font-size: 32px;
   line-height: 1.1;
+  max-width: 288px;
   font-weight: 900;
   margin: 0;
+  z-index: 10;
+  position: relative;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .cover__title {
+    font-size: 72px;
+    line-height: 1.06;
+    max-width: 560px;
+  }
 }
