Верстка блока places

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,12 @@
   background: #2a2c2f;
   color: #ffffff;
   font-family: 'Inter', Arial, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+-ms-text-size-adjust: 100%;
+-moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility; 
 }
 
 @media (min-width: 768px) {
