--- a/blocks/page/__section/_size/_m/page__section_size_m.css
+++ b/blocks/page/__section/_size/_m/page__section_size_m.css
@@ -5,13 +5,15 @@
 
 @media (min-width: 768px) {
   .page__section_size_m {
-
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
 
 @media (min-width: 1024px) {
   .page__section_size_m {
-
+    padding-left: 48px;
+    padding-right: 48px;
   }
 }
 
