--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,4 +1,21 @@
 .place__image {
-  width: 100%;
-  margin-top: 32px;
+  max-width: 100%;
+}
+
+@media (min-width: 768px) {
+  .place__image {
+
+  }
+}
+
+@media (min-width: 1024px) {
+  .place__image {
+
+  }
+}
+
+@media (min-width: 1280px) {
+  .place__image {
+
+  }
 }
