--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,10 +2,17 @@
   font-size: 16px;
   line-height: 1.63;
   font-weight: 400;
+  padding: 0;
   margin: 25px 0 0;
-  padding: 0 16px;
 }
 
-.place__paragraph:nth-of-type(1) {
-  margin: 32px 0 0;
+.place__paragraph:first-child {
+  margin: 0;
+}
+
+@media (min-width: 1024px) {
+  .place__paragraph {
+    font-size: 18px;
+    margin-top: 26px;
+  }
 }
