--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -2,10 +2,25 @@
   font-size: 32px;
   line-height: 1.1;
   font-weight: 900;
-  margin: 50px 0 0;
+  margin: 0;
+  box-sizing: border-box;
   padding: 0 16px;
 }
 
 .place__title:nth-of-type(1) {
-  margin: 64px 0 0;
+  /* margin: 64px 0 0; */
+}
+
+@media (min-width: 768px) {
+  .place__title {
+    font-size: 42px;
+    padding: 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  .place__title {
+    font-size: 72px;
+    line-height: 1.05;
+  }
 }
