--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,3 +1,15 @@
 .places {
+  margin-top: 50px;
+}
 
+@media (min-width: 768px) {
+  .places {
+    margin-top: 88px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .places {
+    margin-top: 92px;
+  }
 }
