--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -7,10 +7,16 @@
   margin: 0;
   box-sizing: border-box;
   padding: 0 16px;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .place__link:visited {
   color: #ffffff;
+}
+
+.place__link:hover {
+  opacity: .8;
+  cursor: pointer;
 }
 
 @media (min-width: 768px) {
