--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,10 +1,11 @@
 .place__link {
+  display: block;
   font-size: 18px;
   line-height: 1.22;
   font-weight: 400;
   text-decoration: underline;
   color: #ffffff;
-  margin: 0;
+  margin: 12px 0 0;
   box-sizing: border-box;
   padding: 0 16px;
   transition: opacity 0.3s ease-in-out;
