--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -7,3 +7,7 @@
   height: 100%;
   transition: background-color 0.3s ease-in-out;
 }
+
+.cover__link:hover .cover__overlay {
+  background-color: rgba(42, 44, 47, 0.8);
+}
