--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,7 +1,7 @@
 .intro__list {
   font-size: 12px;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: bold;
   list-style: none;
   padding: 0;
   margin: 34px 0 0;
