--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -2,3 +2,15 @@
   width: 100%;
   margin-top: 40px;
 }
+
+@media (min-width: 768px) {
+  .lead__image {
+    margin-top: 56px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .lead__image {
+    margin-top: 64px;
+  }
+}
