--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,10 +4,15 @@
   font-size: 18px;
   line-height: 1.11;
   font-weight: 400;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .header__lang-link:visited {
   color: #ffffff;
+}
+
+.header__lang-link:hover {
+  opacity: .8;
 }
 
 @media (min-width: 768px) {
