--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -4,7 +4,7 @@
   font-weight: 400;
   text-transform: uppercase;
   letter-spacing: 1.5px;
-  margin-top: 8px;
+  margin: 8px 0 0;
   box-sizing: border-box;
   padding: 0 16px;
 }
