--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,8 @@
 .places {
   margin-top: 64px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (min-width: 768px) {
